feat(tmux): apply RGB feature to any terminal

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set -sa terminal-features ",xterm-256color:RGB"
+set -sa terminal-features ",*:RGB"
 set -g focus-events on
 set -g escape-time 1
 set -g base-index 1
