feat(tmux): add `copy-mode-vi` `rectangle-on` keybind

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -66,7 +66,7 @@ bind C-z resize-pane -Z
 bind S swap-pane -U
 
 bind C-c copy-mode
-bind -T copy-mode-vi Space send-keys -X rectangle-toggle
+bind -T copy-mode-vi C-q   send-keys -X rectangle-on
 bind -T copy-mode-vi v     send-keys -X begin-selection
 bind -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel
 bind -T copy-mode-vi Y     send-keys -X copy-pipe-end-of-line-and-cancel
