feat(tmux): add `kill-window` keybind

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -53,6 +53,7 @@ bind C-Delete kill-server
 bind C-n new-window
 bind C-q previous-window
 bind C-e next-window
+bind X kill-window
 
 bind C-x kill-pane
 bind C-p display-panes
