feat(tmux): rebind session list menu

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -48,6 +48,7 @@ unbind E
 bind N new-session
 bind Q switch-client -p
 bind E switch-client -n
+bind C-s choose-tree -s
 bind C-Delete kill-server
 
 bind C-n new-window
