feat(tmux): add keybind for tmux_sessionizer

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -50,6 +50,7 @@ bind Q switch-client -p
 bind E switch-client -n
 bind C-s choose-tree -s
 bind C-Delete kill-server
+bind -n M-s display-popup -E tmux_sessionizer
 
 bind C-n new-window
 bind C-q previous-window
