--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,6 +4,7 @@ set -g escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows "on"
+set -g detach-on-destroy "no-detached"
 
 set -g status-style bg=default,fg=colour15
 
