feat(tmux): rebind kill-server and add kill-session keybind

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -50,7 +50,8 @@ bind N new-session
 bind Q switch-client -p
 bind E switch-client -n
 bind C-s choose-tree -s
-bind C-Delete kill-server
+bind C-Delete kill-session
+bind -n S-Delete kill-server
 bind -n M-s display-popup -E tmux_sessionizer
 
 bind C-n new-window
